# cuTensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.yml  run.cpp  setup.py
benchmark/: README.md  matmul_benchmark.py
compat/nvcc/include/bits/: math-vector.h
examples/: ex1_create.py  ex2_modify.py  ex3_operators.py  ex4_extra.py
examples/basic/: basic.py  run  run.cpp
include/: cutensor.h  tensor.h
include/gpu/: gpu.h  gpu_ops.h
src/: cuTensor_pybind.cpp  cutensor.cpp  cutensor_ops.cpp  cutensor_wrap.cpp  tensor.cpp
src/gpu/: gpu.cu  gpu_ops.cu
